--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
                 <!--baner-->
                 <div class="main_baner gradient conteiner-fluid row px-2 px-md-5 py-2 py-md-5 ms-0 me-md-5 rounded-4 bg-light">
                     <h1 class="main_baner_title text-center mt-1 mt-lg-5 px-1 px-lg-5 pt-1 pt-lg-5 col-12">
-                        We are a  <!--animation-->
-                        <span class="underline"> Ukrainian fintech 
+                        We are a Ukrainian fintech <!--animation-->
+                        <span class="main_baner_underline conteiner-fluid"> 
                             <svg width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_30_615)">
                                 <path 
                                     d="M9.8847 19.3913C42.4895 10.9236 87.0446 6.49731 182.941 4.76527C215.103 4.57282 298.017 3.80303 419.584 10.5387"
-                                    stroke="#1682F9" stroke-width="6.67229" stroke-linecap="round" stroke-dasharray="0.48 0.48" />
+                                    stroke="#1682F9" stroke-width="3" stroke-linecap="round" stroke-dasharray="0.48 0.48" />
                             </g>
                             <defs>
                                 <clipPath id="clip0_30_615">
@@ -96,9 +96,24 @@
                     </span>
                 </div>
                 <!--solutions-->
-                <section class="conteiner-fluid row ms-2 mx-md-4 my-1 my-lg-5 py-0 py-md-5 px-0 px-lg-5">
+                <section class="solutions conteiner-fluid row ms-2 mx-md-4 my-1 my-lg-5 py-0 py-md-5 px-0 px-lg-5">
                     <div class="conteiner-fluid text-wrap ms-0 row">
-                        <h2 id="solutions" class="solution_title py-4 col-12">Our Solutions</h2>
+                        <h2 id="solutions" class="solution_title py-4 col-12">Our Solutions
+                            <span class="solutions_underline conteiner-fluid">
+                                <svg width="264" height="21" viewBox="0 0 264 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_30_529)">
+                                        <path
+                                            d="M6.62207 17.0894C26.5579 9.83057 53.8006 6.03616 112.436 4.5514C132.101 4.38642 182.797 3.72653 257.128 9.50062"
+                                            stroke="#FAC730" stroke-width="4.83061" stroke-linecap="round" stroke-dasharray="0.35 0.35" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_30_529">
+                                            <rect width="263.406" height="19.7969" fill="white" transform="translate(0.578125 0.921875)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </span>
+                        </h2>
                         <p class="solution_content text-start col-12">
                             amofintech is wholly focused on delivering a solution for payment businesses, banks, marketplaces, chain stores that
                             enhances the customer proposition of their clients – without upfront investment in systems, or process changes.
@@ -138,7 +153,22 @@
                         </div>
                     </div>
                     <div class="solution ps-4 pt-0 pt-md-5 mt-5 ms-1 row">
-                        <h2 class="solution_title text-start mb-5 row">We understand the customers’ journey and know what solutions you need</h2>
+                        <h2 class="solution_title text-start mb-5 row">We understand 
+                            <span class="solution_bottom_underline">
+                                <svg width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_30_615)">
+                                        <path
+                                            d="M9.8847 19.3913C42.4895 10.9236 87.0446 6.49731 182.941 4.76527C215.103 4.57282 298.017 3.80303 419.584 10.5387"
+                                            stroke="#1682F9" stroke-width="6.67229" stroke-linecap="round" stroke-dasharray="0.48 0.48" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_30_615">
+                                            <rect width="430.797" height="29.0938" fill="white" transform="translate(0 0.53125)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </span>
+                            the customers’ journey and know what solutions you need</h2>
                         <p class="solution_content text-start px-3 pe-lg-5 row">
                             We’re creating a more open world, where anyone, anywhere, can open cards, receive or make any kind of payment. We’re
                             changing the customer journey and building new opportunities to scale your business.
@@ -146,9 +176,24 @@
                     </div>
                 </section>
                 <!--technologies-->
-                <section class="row py-1 py-lg-5 ps-sm-0 px-lg-5 mx-0 mx-sm-3 mx-lg-4">
+                <section class="technologies row py-1 py-lg-5 ps-sm-0 px-lg-5 mx-0 mx-sm-3 mx-lg-4">
                     <div class="ms-3 ms-lg-0 mb-2 mb-lg-5 row">
-                        <h2 class="technologies_title mb-4 row" id="technologies">Our Technologies</h2>
+                        <h2 class="technologies_title mb-4 row" id="technologies">Our Technologies
+                            <span class="technologies_underline">
+                                <svg width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_30_615)">
+                                        <path
+                                            d="M9.8847 19.3913C42.4895 10.9236 87.0446 6.49731 182.941 4.76527C215.103 4.57282 298.017 3.80303 419.584 10.5387"
+                                            stroke="#FAC730" stroke-width="6.67229" stroke-linecap="round" stroke-dasharray="0.48 0.48" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_30_615">
+                                            <rect width="430.797" height="29.0938" fill="white" transform="translate(0 0.53125)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </span>
+                        </h2>
                         <p class="technologies_content text-start row">
                             Our technologies are a combination of industrial solutions with systems of our own development to meet the most
                             demanding needs of users
@@ -172,7 +217,22 @@
                         </div>
                     </div>
                     <div class="technologies_list row">
-                        <h2 class="mt-5 text-start ps-4 ps-md-3 pe-0 me-0 col-12">amofintech creates opportunities that will change your life</h2>
+                        <h2 class="mt-5 text-start ps-4 ps-md-3 pe-0 me-0 col-12">amofintech creates opportunities that will change your life
+                            <span class="technologies_bottom_underline">
+                                <svg width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g clip-path="url(#clip0_30_615)">
+                                        <path
+                                            d="M9.8847 19.3913C42.4895 10.9236 87.0446 6.49731 182.941 4.76527C215.103 4.57282 298.017 3.80303 419.584 10.5387"
+                                            stroke="#1682F9" stroke-width="6.67229" stroke-linecap="round" stroke-dasharray="0.48 0.48" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_30_615">
+                                            <rect width="430.797" height="29.0938" fill="white" transform="translate(0 0.53125)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </span>
+                        </h2>
                         <ul class="technologies_list_items pt-3 pt-md-5 ms-0 ms-md-5 ps-lg-0 ps-5 pe-0 col">
                             <li class="technologies_list_item mb-3 col-12">simple implementation in business process (easily integration with your business process)</li>
                             <li class="technologies_list_item mb-3 col-12">convenient ecosystem for partners</li>
@@ -182,10 +242,25 @@
                     </div>
                 </section>
                 <!--services-->
-                <section class="py-0 py-xxl-5 my-1 my-xxl-5 px-3 px-sm-4 mx-0 mx-md-2">
+                <section class="services py-0 py-xxl-5 my-1 my-xxl-5 px-3 px-sm-4 mx-0 mx-md-2">
                     <div class="d-flex flex-wrap">
                         <div class="mb-4 ms-3 ms-md-5 text-wrap row">
-                            <h2 class="services_title mb-4 col-12" id="services">Our Services</h2>
+                            <h2 class="services_title mb-4 col-12" id="services">Our Services
+                                <span class="services_underline">
+                                    <svg width="264" height="21" viewBox="0 0 264 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0_30_529)">
+                                            <path
+                                                d="M6.62207 17.0894C26.5579 9.83057 53.8006 6.03616 112.436 4.5514C132.101 4.38642 182.797 3.72653 257.128 9.50062"
+                                                stroke="#FAC730" stroke-width="4.83061" stroke-linecap="round" stroke-dasharray="0.35 0.35" />
+                                        </g>
+                                        <defs>
+                                            <clipPath id="clip0_30_529">
+                                                <rect width="263.406" height="19.7969" fill="white" transform="translate(0.578125 0.921875)" />
+                                            </clipPath>
+                                        </defs>
+                                    </svg>
+                                </span>
+                            </h2>
                             <p class="services_content text-start col-12">
                                 amofintech develops specialized environments for your industry
                             </p>
@@ -236,7 +311,22 @@
             <footer class="wrapper conteiner-fluid w-100">
 
                 <section class="footer_main my-2 my-lg-5 mx-2 mx-lg-4 px-2 px-lg-5 py-2 py-lg-5 row">
-                    <h2 class="footer_main_title ms-3 mx-md-5 ps-0 px-md-5 py-5">Want to learn more?</h2>
+                    <h2 class="footer_main_title ms-3 mx-md-5 ps-0 px-md-5 py-5">Want to learn more?
+                        <span class="footer_main_underline">
+                            <svg width="264" height="21" viewBox="0 0 264 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_30_529)">
+                                    <path
+                                        d="M6.62207 17.0894C26.5579 9.83057 53.8006 6.03616 112.436 4.5514C132.101 4.38642 182.797 3.72653 257.128 9.50062"
+                                        stroke="#FAC730" stroke-width="4.83061" stroke-linecap="round" stroke-dasharray="0.35 0.35" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_30_529">
+                                        <rect width="263.406" height="19.7969" fill="white" transform="translate(0.578125 0.921875)" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+                        </span>
+                    </h2>
                     <div class="d-xl-flex d-flex-wrap">
                         <div class="footer_main_form d-flex flex-wrap ms-0 ms-md-5 ps-1 px-md-5 py-5 col">
                             <h3 class="footer_main_form_title">Talk to us</h3>
