--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
             <!--main-->
             <main class="main conteiner-fluid row" data-bs-spy="scroll" data-bs-target="#navbar-exemple">
                 <!--baner-->
-                <div class="main_baner gradient conteiner-fluid row px-2 px-md-5 py-2 py-md-5 ms-0 me-md-5 rounded-4 bg-light">
+                <div class="main_baner gradient conteiner-fluid d-inline-flex row px-2 px-md-5 py-2 py-md-5 ms-0 me-md-5 rounded-4 bg-light">
                     <h1 class="main_baner_title text-center mt-1 mt-lg-5 px-1 px-lg-5 pt-1 pt-lg-5 col-12">
                         We are a Ukrainian fintech <!--animation-->
-                        <span class="main_baner_underline conteiner-fluid"> 
-                            <svg width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g clip-path="url(#clip0_30_615)">
-                                <path 
+                        <span class="main_baner_underline"> 
+                            <svg class="img-fluid" width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g class="animation" clip-path="url(#clip0_30_615)">
+                                <path class="animation"
                                     d="M9.8847 19.3913C42.4895 10.9236 87.0446 6.49731 182.941 4.76527C215.103 4.57282 298.017 3.80303 419.584 10.5387"
-                                    stroke="#1682F9" stroke-width="3" stroke-linecap="round" stroke-dasharray="0.48 0.48" />
+                                    stroke="#1682F9" stroke-width="4" stroke-linecap="round" stroke-dasharray="0.48 0.48" />
                             </g>
                             <defs>
                                 <clipPath id="clip0_30_615">
@@ -99,10 +99,10 @@
                 <section class="solutions conteiner-fluid row ms-2 mx-md-4 my-1 my-lg-5 py-0 py-md-5 px-0 px-lg-5">
                     <div class="conteiner-fluid text-wrap ms-0 row">
                         <h2 id="solutions" class="solution_title py-4 col-12">Our Solutions
-                            <span class="solutions_underline conteiner-fluid">
-                                <svg width="264" height="21" viewBox="0 0 264 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g clip-path="url(#clip0_30_529)">
-                                        <path
+                            <span class="solutions_underline ms-0 ms-xl-5 ps-xl-5">
+                                <svg class="img-fluid" width="264" height="21" viewBox="0 0 264 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g class="animation" clip-path="url(#clip0_30_529)">
+                                        <path class="animation"
                                             d="M6.62207 17.0894C26.5579 9.83057 53.8006 6.03616 112.436 4.5514C132.101 4.38642 182.797 3.72653 257.128 9.50062"
                                             stroke="#FAC730" stroke-width="4.83061" stroke-linecap="round" stroke-dasharray="0.35 0.35" />
                                     </g>
@@ -152,12 +152,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="solution ps-4 pt-0 pt-md-5 mt-5 ms-1 row">
-                        <h2 class="solution_title text-start mb-5 row">We understand 
+                    <div class="solution ps-5 ps-lg-4 pt-0 pt-md-5 mt-5 row">
+                        <h2 class="solution_title d-inline text-start mb-5 row">We understand 
                             <span class="solution_bottom_underline">
-                                <svg width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g clip-path="url(#clip0_30_615)">
-                                        <path
+                                <svg class="img-fluid" width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g class="animation" clip-path="url(#clip0_30_615)">
+                                        <path class="animation"
                                             d="M9.8847 19.3913C42.4895 10.9236 87.0446 6.49731 182.941 4.76527C215.103 4.57282 298.017 3.80303 419.584 10.5387"
                                             stroke="#1682F9" stroke-width="6.67229" stroke-linecap="round" stroke-dasharray="0.48 0.48" />
                                     </g>
@@ -168,7 +168,8 @@
                                     </defs>
                                 </svg>
                             </span>
-                            the customers’ journey and know what solutions you need</h2>
+                            the customers’ journey and know what solutions you need
+                        </h2>
                         <p class="solution_content text-start px-3 pe-lg-5 row">
                             We’re creating a more open world, where anyone, anywhere, can open cards, receive or make any kind of payment. We’re
                             changing the customer journey and building new opportunities to scale your business.
@@ -179,10 +180,10 @@
                 <section class="technologies row py-1 py-lg-5 ps-sm-0 px-lg-5 mx-0 mx-sm-3 mx-lg-4">
                     <div class="ms-3 ms-lg-0 mb-2 mb-lg-5 row">
                         <h2 class="technologies_title mb-4 row" id="technologies">Our Technologies
-                            <span class="technologies_underline">
-                                <svg width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g clip-path="url(#clip0_30_615)">
-                                        <path
+                            <span class="technologies_underline ms-0 ps-0 ms-xl-5 ps-xl-5">
+                                <svg class="img-fluid" width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g class="animation" clip-path="url(#clip0_30_615)">
+                                        <path class="animation"
                                             d="M9.8847 19.3913C42.4895 10.9236 87.0446 6.49731 182.941 4.76527C215.103 4.57282 298.017 3.80303 419.584 10.5387"
                                             stroke="#FAC730" stroke-width="6.67229" stroke-linecap="round" stroke-dasharray="0.48 0.48" />
                                     </g>
@@ -202,26 +203,26 @@
                     <div class="technologies_schema my-2 my-xl-5 text-center mx-0 px-0 row">
                         <div class="d-xl-flex flex-wrap align-content-center">
                             <div class="col">
-                                <div class="technologies_item card py-3 mb-5 col">Card Processing</div>
-                                <div class="technologies_item payment py-3 col">Payment Portal</div>
+                                <div class="technologies_item card animation py-3 mb-5 col">Card Processing</div>
+                                <div class="technologies_item payment animation py-3 col">Payment Portal</div>
                             </div>
                             <div class="col">
                                 <div class="technologies_item_amo row">
-                                    <div class="technologies_schema_img col ms-4 ms-md-5 pe-5 mt-5"><img src="./scss/img/AMO.png" class="img_amo img-fluid" alt="AMO"></div>
+                                    <div class="technologies_schema_img animation col ms-4 ms-md-5 pe-5 mt-5"><img src="./scss/img/AMO.png" class="img_amo img-fluid" alt="AMO"></div>
                                 </div>
                             </div>
                             <div class="pe-0 pe-xl-5 col">
-                                <div class="technologies_item mobile py-3 mb-5 mt-5 mt-xl-0 col">Mobile Application</div>
-                                <div class="technologies_item api py-3 col">Open API</div>
+                                <div class="technologies_item mobile animation py-3 mb-5 mt-5 mt-xl-0 col">Mobile Application</div>
+                                <div class="technologies_item api animation py-3 col">Open API</div>
                             </div>
                         </div>
                     </div>
                     <div class="technologies_list row">
                         <h2 class="mt-5 text-start ps-4 ps-md-3 pe-0 me-0 col-12">amofintech creates opportunities that will change your life
-                            <span class="technologies_bottom_underline">
-                                <svg width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g clip-path="url(#clip0_30_615)">
-                                        <path
+                            <span class="technologies_bottom_underline d-flex">
+                                <svg class="img-fluid" width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g class="animation" clip-path="url(#clip0_30_615)">
+                                        <path class="animation"
                                             d="M9.8847 19.3913C42.4895 10.9236 87.0446 6.49731 182.941 4.76527C215.103 4.57282 298.017 3.80303 419.584 10.5387"
                                             stroke="#1682F9" stroke-width="6.67229" stroke-linecap="round" stroke-dasharray="0.48 0.48" />
                                     </g>
@@ -246,10 +247,10 @@
                     <div class="d-flex flex-wrap">
                         <div class="mb-4 ms-3 ms-md-5 text-wrap row">
                             <h2 class="services_title mb-4 col-12" id="services">Our Services
-                                <span class="services_underline">
-                                    <svg width="264" height="21" viewBox="0 0 264 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <g clip-path="url(#clip0_30_529)">
-                                            <path
+                                <span class="services_underline d-flex ms-0 ms-xl-5 ps-xl-5">
+                                    <svg class="img-fluid" width="264" height="21" viewBox="0 0 264 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <g class="animation" clip-path="url(#clip0_30_529)">
+                                            <path class="animation"
                                                 d="M6.62207 17.0894C26.5579 9.83057 53.8006 6.03616 112.436 4.5514C132.101 4.38642 182.797 3.72653 257.128 9.50062"
                                                 stroke="#FAC730" stroke-width="4.83061" stroke-linecap="round" stroke-dasharray="0.35 0.35" />
                                         </g>
@@ -314,8 +315,8 @@
                     <h2 class="footer_main_title ms-3 mx-md-5 ps-0 px-md-5 py-5">Want to learn more?
                         <span class="footer_main_underline">
                             <svg width="264" height="21" viewBox="0 0 264 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <g clip-path="url(#clip0_30_529)">
-                                    <path
+                                <g class="animation" clip-path="url(#clip0_30_529)">
+                                    <path class="animation"
                                         d="M6.62207 17.0894C26.5579 9.83057 53.8006 6.03616 112.436 4.5514C132.101 4.38642 182.797 3.72653 257.128 9.50062"
                                         stroke="#FAC730" stroke-width="4.83061" stroke-linecap="round" stroke-dasharray="0.35 0.35" />
                                 </g>
