--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                             <span class="navbar-toggler-icon icon-fluid"></span>
                         </button>
                         <div class="offcanvas offcanvas-end bg-primary" tabindex="-1" id="offcanvas" aria-labelledby="offcanvas">
-                            <div class="bg-primary">
+                            <div class="bg-primary d-block d-lg-none">
                                 <div class="offcanvas-header bg-primary justify-content-end mb-5">
-                                    <button type="button" class="btn-close bg-white bg-opacity-75 rounded-5 m-1" data-bs-dismiss="offcanvas"
-                                        aria-label="Close"></button>
+                                    <button type="button" class="btn-close bg-white bg-opacity-75 rounded-5 m-1"
+                                        data-bs-dismiss="offcanvas" aria-label="Close"></button>
                                 </div>
                                 <div class="offcanvas-body bg-primary py-5 mx-5" data-bs-dismiss="offcanvas">
                                     <ul class="header_nav navbar-nav nav-pills my-5 mx-0 mx-sm-4 d-flex d-lg-none">
