--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar-exemple" data-bs-offset="50" data-scroll-time="0">
     
-        <div class="wrapper container-fluid pt-2 pt-md-5 pb-5 ps-4 pe-4 pe-md-0 px-lg-5">
+        <div class="wrapper container-fluid pt-2 pt-md-5 pb-5 ps-4 pe-4 pe-md-0 px-lg-5 border-0">
             <!--header-->
             <header class="header row my-5">
 
@@ -39,25 +39,25 @@
                         <button class="navbar-toggler border-0 text-dark me-0 me-md-5 d-block d-lg-none" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="offcanvas">
                             <span class="navbar-toggler-icon icon-fluid"></span>
                         </button>
-                        <div class="offcanvas offcanvas-end bg-primary" tabindex="-1" id="offcanvas" aria-labelledby="offcanvas">
-                            <div class="bg-primary d-block d-lg-none">
+                        <div class="offcanvas offcanvas-end bg-primary d-block d-lg-none"  tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
+                            <div class="bg-primary ">
                                 <div class="offcanvas-header bg-primary justify-content-end mb-5">
                                     <button type="button" class="btn-close bg-white bg-opacity-75 rounded-5 m-1"
                                         data-bs-dismiss="offcanvas" aria-label="Close"></button>
                                 </div>
-                                <div class="offcanvas-body bg-primary py-5 mx-5" data-bs-dismiss="offcanvas">
-                                    <ul class="header_nav navbar-nav nav-pills my-5 mx-0 mx-sm-4 d-flex d-lg-none">
-                                        <li class="nav-item">
-                                            <a class="nav-link nav-link-sidebar text-white mx-0 mx-sm-4" href="#solutions">Solutions</a>
+                                <div class="offcanvas-body bg-primary py-5 mx-5">
+                                    <ul class="header_nav navbar-nav my-5 mx-0 mx-sm-4 d-flex d-lg-none">
+                                        <li class="nav-item my-2">
+                                            <a class="nav-link-sidebar text-white mx-0 mx-sm-4" href="#solutions">Solutions</a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link nav-link-sidebar text-white mx-0 mx-sm-4" href="#technologies">Technologies</a>
+                                        <li class="nav-item my-2">
+                                            <a class="nav-link-sidebar text-white mx-0 mx-sm-4" href="#technologies">Technologies</a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link nav-link-sidebar text-white mx-0 mx-sm-4" href="#services">Services</a>
+                                        <li class="nav-item my-2">
+                                            <a class="nav-link-sidebar text-white mx-0 mx-sm-4" href="#services">Services</a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link nav-link-sidebar text-white mx-0 mx-sm-4" href="#contacts">Contacts</a>
+                                        <li class="nav-item my-2">
+                                            <a class="nav-link-sidebar text-white mx-0 mx-sm-4" href="#contacts">Contacts</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="solution ps-5 ps-lg-4 pt-0 pt-md-5 mt-5 row">
                         <h2 class="solution_title d-inline text-start mb-5 row">We understand 
-                            <span class="solution_bottom_underline">
+                            <span class="solution_bottom_underline ms-0 ps-0 ms-xl-5 ps-xl-5">
                                 <svg class="img-fluid" width="431" height="30" viewBox="0 0 431 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <g class="animation" clip-path="url(#clip0_30_615)">
                                         <path class="animation"
@@ -311,7 +311,7 @@
             <footer class="wrapper conteiner-fluid w-100">
 
                 <section class="footer_main my-2 my-lg-5 mx-2 mx-lg-4 px-2 px-lg-5 py-2 py-lg-5 row">
-                    <h2 class="footer_main_title ms-3 mx-md-5 ps-0 px-md-5 py-5">Want to learn more?
+                    <h2 class="footer_main_title ms-3 ms-md-5 ps-0 px-md-5 py-5">Want to learn more?
                         <span class="footer_main_underline">
                             <svg width="264" height="21" viewBox="0 0 264 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g class="animation" clip-path="url(#clip0_30_529)">
@@ -365,7 +365,7 @@
                         <div class="row">
                             <div class="d-md-flex">
                                 <!--contacts-->
-                                <div class="footer_main_contacts conteiner-fluid ms-1 ms-md-4 ps-0 ps-md-5 pt-5 col" id="contacts">
+                                <div class="footer_main_contacts conteiner-fluid ms-1 ms-md-5 ps-1 ps-md-5 pt-5 col" id="contacts">
                                     <h3 class="footer_main_contacts_title mb-4">Contacts</h3>
                                     <a class="link link-warning" href="#">info@amofintech.com</a>
                                 </div>
@@ -393,9 +393,9 @@
                 </div>
             </footer>
     
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="node_modules/bootstrap/js/src/offcanvas.js"></script>
-    <script src="js/index.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="js/index.js"></script>
+
     </body>
 </html>
