--- a/index.html
+++ b/index.html
@@ -72,6 +72,30 @@
             <main class="main conteiner-fluid row" data-bs-spy="scroll" data-bs-target="#navbar-exemple">
                 <!--baner-->
                 <div class="main_baner gradient conteiner-fluid d-inline-flex row px-2 px-md-5 py-2 py-md-5 ms-0 me-md-5 rounded-4 bg-light">
+                    <div>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                        <span class="circle"></span>
+                     </div>
                     <h1 class="main_baner_title text-center mt-1 mt-lg-5 px-1 px-lg-5 pt-1 pt-lg-5 col-12">
                         We are a Ukrainian fintech <!--animation-->
                         <span class="main_baner_underline"> 
