--- a/index.html
+++ b/index.html
@@ -392,9 +392,7 @@
                     </div>
                 </div>
             </footer>
-    
-        <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="./dist/bundle.js"></script>
         <script src="js/index.js"></script>
     </body>
 </html>
